# django-template

./: .bowerrc  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Pipfile  Procfile  README.md  bower.json  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker.env  fabfile.py  gulpfile.js  manage.py  package.json  poetry.py  pyproject.toml  readme.md  requirements.txt  tasks.py
administrativo/: apps.py  urls.py
administrativo/usuarios/: adapters.py  admin.py  api.py  apps.py  factories.py  formatters.py  models.py  permissions.py  serializers.py  urls.py  views.py
administrativo/usuarios/migrations/: 0001_initial.py
arquitetura/: admin.py  apps.py  mixins.py  models.py  pagination.py  storages.py  views.py
config/: cert.pem  nginx.conf  prod.py
core/: __init__.py  adapters.py  admin.py  apps.py  assets.py  factories.py  formatters.py  loading.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py  storages.py  urls.py  utils.py  views.py
core/management/commands/: add_static_tags.py
core/migrations/: 0001_initial.py
core/templatetags/: core_tags.py
core/tests/: test_commands.py  test_loading.py  test_mixins.py  test_templatetags.py
docker/: docker.env
docker.cfg/: celery.dev.py  celery.prod.py  dev.py  nginx.conf  prod.py
docker/app/: dev.py  prod.py
docker/celery/: celery.dev.py  celery.prod.py
docker/postgres/: init-database.sh
functional_tests/: histories.py
nginx/: Dockerfile  key.pem  nginx.conf
project_name/: api.py  celery.py  heroku_wsgi.py  routes.py  urls.py  views.py  wsgi.py
project_name/assets/app/: app.main.es6  app.module.js  app.states.js  main.es6  main.js
project_name/assets/app/core/: Resource.es6  User.es6  lerArquivo.directive.js  mensagem.js
project_name/settings/: __init__.py  base.py  development.py  heroku.py  production.py  staging.py  test.py
project_name/static/app/: app.config.js  app.module.js  app.routes.js  mainCtrl.js
project_name/static/app/core/: confirm-modal.html  confirmModalService.js  login.controller.js  serviços.js  submit.directive.js  userInfo.directive.js
project_name/static/app/core/componentes/: file.js  paginator.js  updatePassword.html  userInfo.html  userInfo.js
project_name/static/app/core/components/: confirmModal.js  paginator.html  updatePassword.js  userInfo.html
project_name/static/templates/: angular-busy.html  config.html
project_name/templates/: base.html
project_name/templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  signup_closed.html  verification_sent.html
project_name/templates/account/email/: email_confirmation_message.html  email_confirmation_message.txt  password_reset_key_message.html  password_reset_key_message.txt
project_name/templates/account/includes/: header_logo.html
project_name/templates/core/: user_info_template.html
project_name/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_email.html
projeto/: api.py  celery.py  urls.py  views.py  whitenoise.py  wsgi.py
projeto/apps/administrativo/: apps.py
projeto/apps/administrativo/templatetags/: __init__.py
projeto/apps/administrativo/usuarios/: adapters.py  admin.py  api.py  apps.py  factories.py  forms.py  managers.py  middleware.py  models.py  serializers.py  urls.py  views.py
projeto/apps/administrativo/usuarios/migrations/: 0001_initial.py  0002_vinculo_ativo.py
projeto/apps/arquitetura/: apps.py  fields.py  filters.py  mixins.py  pagination.py  permissions.py  runners.py  tasks.py  utils.py  views.py
projeto/apps/arquitetura/migrations/: 0001_add_uuid_extension.py
projeto/apps/northwind/: admin.py  apps.py  factories.py  models.py  urls.py
projeto/apps/northwind/migrations/: 0001_initial.py
projeto/assets/css/: app.css
projeto/assets/js/: app.js
projeto/assets/libs/adminlte-3.2.0/css/: adminlte.css  adminlte.css.map  adminlte.min.css  adminlte.min.css.map
projeto/assets/libs/adminlte-3.2.0/css/alt/: adminlte.components.css.map  adminlte.core.css  adminlte.core.css.map  adminlte.core.min.css  adminlte.core.min.css.map  adminlte.extra-components.css.map  adminlte.light.css  adminlte.light.css.map  adminlte.light.min.css  adminlte.light.min.css.map  adminlte.pages.css.map  adminlte.plugins.css  adminlte.plugins.css.map  adminlte.plugins.min.css  adminlte.plugins.min.css.map
projeto/assets/libs/bootstrap-icons-1.11.2/: music-note-beamed.svg:Zone.Identifier
projeto/functional_tests/: base.py  test_home.py
projeto/settings/: base.py  development.py  production.py  staging.py  test.py  whitenoise.py
projeto/templates/: 403.html  404.html  500.html  app.html  base.html  index.html  vinculos.html
projeto/templates/_includes/: breadcrumbs.html  form_non_field_errors.html  messages.html  navbar.html  paginador.html  sidemenu.html
projeto/templates/_reports/: base.html  teste.html
projeto/templates/account/: email_confirm.html  login.html  verification_sent.html
projeto/templates/clinica/consultas/: marcar.html
projeto/templates/includes/: breadcrumbs.html  form_non_field_errors.html  messages.html  navbar.html  paginador.html  spinner_overlay.html
projeto/templates/northwind/: index.html
projeto/templates/usuarios/: vinculo_create.html  vinculo_delete.html  vinculo_select.html
projeto/templates/usuarios/_includes/: render_vinculo.html  vinculo_selecionado.html
requirements/: base.txt  development.txt
sql/: inicial.sql
